--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 #center{
-
-    border: width 50%;
    display: flex;
+   flex-direction: column;
    align-items: center;
    justify-content: center;
- 
+   height: 100vh;
+padding: 2rem;
    } 
+
     #input{
        padding: 15px;
        background-color: red;
@@ -16,5 +17,6 @@
    }
    body{
        border-width: 10px;
+     
    } 
    
